[desktop] use StandardCharsets.UTF_8